# Ros2_Drone

./: README.md
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/led_robot/share/led_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  package.zsh
install/led_robot/share/led_robot/cmake/: led_robotConfig-version.cmake  led_robotConfig.cmake
install/led_robot/share/led_robot/config/: ekf.yaml  joint_name_drone.yaml
install/led_robot/share/led_robot/description/: drone_urdf_z.csv  gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.urdf  robot_core.xacro  robot_imu.xacro
install/led_robot/share/led_robot/environment/: ament_prefix_path.dsv  path.dsv
install/led_robot/share/led_robot/launch/: rsp.launch.py
install/led_robot/share/led_robot/meshes/: base_link.STL  left_motor_bc_link.STL  right_motor_bc_link.STL
log/: latest_build
source/install/: local_setup.sh  setup.ps1  setup.sh
source/install/led_robot/share/led_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  (+5 more)
source/led_robot/: CMakeLists.txt  package.xml
source/led_robot/config/: gz_bridge.yaml
source/led_robot/description/: drone_urdf_z.csv  gazebo_control.xacro  robot.urdf.xacro  robot_camera.xacro  robot_core.urdf
source/led_robot/gazebo_world/: world.world
source/led_robot/launch/: launch_sim.launch.py  rsp.launch.py
source/led_robot/meshes/: base_link.STL  left_motor_bc_link.STL  left_motor_fr_link.STL  right_motor_bc_link.STL  right_motor_fr_link.STL
source/log/: latest_build
(+23 files in other folders)
